# escodrinyar

./: .buildinfo  .gitignore  .readthedocs.yaml  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: generate-pages.yaml
_sources/reference/: index.rst.txt
_sources/reference/_docstrings/: Layout.__add__.ipynb.txt  Layout.__or__.ipynb.txt
_sources/reference/docstrings/: Layout.__add__.rst.txt  Layout.__or__.rst.txt
docs/: Makefile  conf.py
docs/_templates/autosummary/: class.rst  layout.rst  plot.rst  scale.rst
docs/getting_started/: index.md
docs/reference/_docstrings/: Layout.__add__.ipynb  Layout.__or__.ipynb  Makefile
docs/tools/: nb_to_doc.py
examples/: convexhull.ipynb  penguins.ipynb
getting_started/: index.html
reference/: index.html
reference/_docstrings/: Layout.__add__.html  Layout.__or__.html
reference/docstrings/: Layout.__add__.html  Layout.__or__.html
src/escodrinyar/: __init__.py  layout.py  marks.py  plot.py  stats.py  utils.py
src/escodrinyar/marks/: area.py  rect.py
src/escodrinyar/stats/: aggregation.py
