[project]
name = "escodrinyar"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Aleix Alcacer Sales", email = "aalcacer@uji.es" }
]
dependencies = [
    "scipy>=1.12.0",
    "matplotlib>=3.8.2",
    "PyQt5>=5.15.10",
    "plotnine>=0.12.4",
    "seaborn>=0.13.2",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]
hello = "escodrinyar:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "jupyter>=1.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/escodrinyar"]
