[project]
name = "escodrinyar"
version = "0.1.0"
description = "A seaborn objects API extension for data visualization"
authors = [
    { name = "Aleix Alcacer Sales", email = "aleixalcacer@gmail.com" }
]
dependencies = [
    "scipy>=1.12.0",
    "matplotlib>=3.8.2",
    "seaborn>=0.13.2",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]
hello = "escodrinyar:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "jupyter>=1.0.0",
    "sphinx>=7.2.6",
    "myst_nb>=1.0.0",
    "nbconvert>=7.16.1",
    "pydata-sphinx-theme>=0.15.2",
    "numpydoc>=1.6.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/escodrinyar"]
